Fix line and endings and add names

--- a/sof-glkda7219max/sof-glkda7219max.1loc/HiFi.conf
+++ b/sof-glkda7219max/sof-glkda7219max.1loc/HiFi.conf
@@ -31,6 +31,8 @@ SectionVerb {
 }
 
 SectionDevice."Speaker" {
+	Comment "Speaker"
+
 	Value {
 		PlaybackPCM "hw:sofglkda7219max"
 		DspName "speaker_eq"
@@ -46,6 +48,8 @@ SectionDevice."Speaker" {
 }
 
 SectionDevice."Headphone" {
+	Comment "Headphones"
+
 	Value {
 		PlaybackPCM "hw:sofglkda7219max,1"
 		PlaybackMixerElem "Headphone"
@@ -65,6 +69,8 @@ SectionDevice."Headphone" {
 }
 
 SectionDevice."Line Out" {
+	Comment "Headphones"
+
 	Value {
 		PlaybackPCM "hw:sofglkda7219max,1"
 		PlaybackMixerElem "Headphone"
@@ -84,6 +90,8 @@ SectionDevice."Line Out" {
 }
 
 SectionDevice."Internal Mic" {
+	Comment "Internal Mic"
+
 	Value {
 		CapturePCM "hw:sofglkda7219max,99"
 		CaptureChannelMap "0 0 -1 -1 -1 -1 -1 -1 -1 -1 -1"
@@ -98,6 +106,8 @@ SectionDevice."Internal Mic" {
 }
 
 SectionDevice."Mic" {
+	Comment "Headset Mic"
+
 	Value {
 		CapturePCM "hw:sofglkda7219max,1"
 		CaptureMixerElem "Headset Mic"
@@ -115,6 +125,8 @@ SectionDevice."Mic" {
 	]
 }
 SectionDevice."HDMI1" {
+	Comment "HDMI1"
+
 	Value {
 		PlaybackPCM "hw:sofglkda7219max,5"
 		JackDev "sof-glkda7219max HDMI/DP,pcm=5"
@@ -126,6 +138,8 @@ SectionDevice."HDMI1" {
 }
 
 SectionDevice."HDMI2" {
+	Comment "HDMI2"
+
 	Value {
 		PlaybackPCM "hw:sofglkda7219max,6"
 		JackDev "sof-glkda7219max HDMI/DP,pcm=6"
