--- a/sof-rt5682/sof-rt5682/HiFi.conf
+++ b/sof-rt5682/sof-rt5682/HiFi.conf
@@ -35,6 +35,8 @@ SectionVerb {
 }
 
 SectionDevice."Speaker" {
+	Comment "Speaker"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,0"
 		EchoReferenceDev "Echo Reference"
@@ -53,6 +55,8 @@ SectionDevice."Speaker" {
 }
 
 SectionDevice."Headphone" {
+	Comment "Headphones"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,1"
 		PlaybackMixerElem "DAC1"
@@ -87,6 +91,8 @@ SectionDevice."Echo Reference" {
 }
 
 SectionDevice."Internal Mic" {
+	Comment "Internal Mic"
+
 	Value {
 		CapturePCM "hw:sofrt5682,99"
 		CaptureChannelMap "0 1 -1 -1 -1 -1 -1 -1 -1 -1 -1"
@@ -95,6 +101,8 @@ SectionDevice."Internal Mic" {
 }
 
 SectionDevice."Mic" {
+	Comment "Headset Mic"
+
 	Value {
 		CapturePCM "hw:sofrt5682,1"
 		CaptureMixerElem "Headset Mic"
@@ -112,6 +120,8 @@ SectionDevice."Mic" {
 }
 
 SectionDevice."HDMI1" {
+	Comment "HDMI1"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,2"
 		JackDev "sof-rt5682 HDMI/DP,pcm=2"
@@ -123,6 +133,8 @@ SectionDevice."HDMI1" {
 }
 
 SectionDevice."HDMI2" {
+	Comment "HDMI2"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,3"
 		JackDev "sof-rt5682 HDMI/DP,pcm=3"
@@ -134,6 +146,8 @@ SectionDevice."HDMI2" {
 }
 
 SectionDevice."HDMI3" {
+	Comment "HDMI3"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,4"
 		JackDev "sof-rt5682 HDMI/DP,pcm=4"
@@ -145,6 +159,8 @@ SectionDevice."HDMI3" {
 }
 
 SectionDevice."HDMI4" {
+	Comment "HDMI4"
+
 	Value {
 		PlaybackPCM "hw:sofrt5682,5"
 		JackDev "sof-rt5682 HDMI/DP,pcm=5"
