--- a/sof-glkda7219max/sof-glkda7219max.1loc/HiFi.conf
+++ b/sof-glkda7219max/sof-glkda7219max.1loc/HiFi.conf
@@ -19,7 +19,7 @@ SectionVerb {
 		cset "name='Mic Volume' 5"
 		cset "name='Capture Digital Volume' 111"
 		cset "name='Capture Digital Switch' 1"
-		cset "name='Mixin Volume' "
+		cset "name='Mixin Volume' 10"
 		cset "name='Mixin Switch' 1"
 		cset "name='Mixer In Mic Switch' 1"
 		cset "name='Out DAIL Mux' ADC"
@@ -34,7 +34,7 @@ SectionDevice."Speaker" {
 	Comment "Speaker"
 
 	Value {
-		PlaybackPCM "hw:sofglkda7219max"
+		PlaybackPCM "hw:sofglkda7219max,0"
 		DspName "speaker_eq"
 	}
 	EnableSequence [
@@ -64,13 +64,13 @@ SectionDevice."Headphone" {
 	DisableSequence [
 		cdev "hw:sofglkda7219max"
 		cset "name='Headphone Jack Switch' off"
-		cset "name='Headphone Switch'"
+		cset "name='Headphone Switch' 0"
 	]
 }
 
 SectionDevice."Line Out" {
-	Comment "Headphones"
-
+	Comment "Line Out"
+	
 	Value {
 		PlaybackPCM "hw:sofglkda7219max,1"
 		PlaybackMixerElem "Headphone"
@@ -85,7 +85,7 @@ SectionDevice."Line Out" {
 	DisableSequence [
 		cdev "hw:sofglkda7219max"
 		cset "name='Headphone Jack Switch' off"
-		cset "name='Headphone Switch'"
+		cset "name='Headphone Switch' 0"
 	]
 }
 
@@ -95,7 +95,7 @@ SectionDevice."Internal Mic" {
 	Value {
 		CapturePCM "hw:sofglkda7219max,99"
 		CaptureChannelMap "0 0 -1 -1 -1 -1 -1 -1 -1 -1 -1"
-		IntrinsicSensitivity "-20"
+		IntrinsicSensitivity "-2600"
 	}
 	EnableSequence [
 		cdev "hw:sofglkda7219max"
