--- a/sof-rt5682/sof-rt5682.rt1015/HiFi.conf
+++ b/sof-rt5682/sof-rt5682.rt1015/HiFi.conf
@@ -4,19 +4,11 @@ SectionVerb {
 	}
 	EnableSequence [
 		cdev "hw:sofrt5682"
-
-		cset "name='Left DAI Sel Mux' Right"
-		cset "name='Right DAI Sel Mux' Left"
-		cset "name='Left Digital Volume' 127"
-		cset "name='Right Digital Volume' 127"
-		cset "name='Left FS Max Volume' 7"
-		cset "name='Right FS Max Volume' 7"
-
 		cset "name='Headphone Jack Switch' off"
 		cset "name='HPOL Playback Switch' off"
 		cset "name='HPOR Playback Switch' off"
-		cset "name='Stereo1 DAC MIXL DAC L1 Switch' 1"
-		cset "name='Stereo1 DAC MIXR DAC R1 Switch' 1"
+		cset "name='Stereo1 DAC MIXL DAC L1 Switch' 0"
+		cset "name='Stereo1 DAC MIXR DAC R1 Switch' 0"
 		cset "name='Stereo1 ADC L Mux' 0"
 		cset "name='STO1 ADC Capture Switch' on"
 		cset "name='RECMIX1L CBJ Switch' 1"
@@ -28,6 +20,11 @@ SectionVerb {
 		cset "name='Stereo1 ADC MIXR ADC2 Switch' 0"
 		cset "name='Stereo1 ADC MIXL ADC1 Switch' 1"
 		cset "name='Stereo1 ADC MIXR ADC1 Switch' 1"
+
+		cset "name='Left Bypass Boost' 1"
+		cset "name='Right Bypass Boost' 1"
+		cset "name='Left Mono LR Select' Left"
+		cset "name='Right Mono LR Select' Right"
 	]
 	DisableSequence [
 	]
@@ -38,18 +35,23 @@ SectionDevice."Speaker" {
 
 	Value {
 		PlaybackPCM "hw:sofrt5682,0"
-		EchoReferenceDev "Echo Reference"
 		DspName "speaker_eq"
 	}
 	EnableSequence [
 		cdev "hw:sofrt5682"
-		cset "name='Left VI Sense Switch' on"
-		cset "name='Right VI Sense Switch' on"
+		cset "name='Left Spk Switch' on"
+		cset "name='Right Spk Switch' on"
+		cset "name='Left Mono LR Select' 0"
+		cset "name='Right Mono LR Select' 1"
+		cset "name='Left Bypass Boost' 1"
+		cset "name='Right Bypass Boost' 1"
+		cset "name='Left Spk Switch' 1"
+		cset "name='Right Spk Switch' 1"
 	]
 	DisableSequence [
 		cdev "hw:sofrt5682"
-		cset "name='Left VI Sense Switch' off"
-		cset "name='Right VI Sense Switch' off"
+		cset "name='Left Spk Switch' off"
+		cset "name='Right Spk Switch' off"
 	]
 }
 
@@ -68,6 +70,8 @@ SectionDevice."Headphone" {
 		cset "name='Headphone Jack Switch' on"
 		cset "name='HPOL Playback Switch' 1"
 		cset "name='HPOR Playback Switch' 1"
+		cset "name='Stereo1 DAC MIXL DAC L1 Switch' 1"
+		cset "name='Stereo1 DAC MIXR DAC R1 Switch' 1"
 	]
 	DisableSequence [
 		cdev "hw:sofrt5682"
@@ -75,47 +79,74 @@ SectionDevice."Headphone" {
 		cset "name='Headphone Jack Switch' off"
 		cset "name='HPOL Playback Switch' 0"
 		cset "name='HPOR Playback Switch' 0"
-
 	]
 }
 
-SectionDevice."Echo Reference" {
+SectionDevice."Line Out" {
+	Comment "Line Out"
+
 	Value {
-		CapturePCM "hw:sofrt5682,0"
+		PlaybackPCM "hw:sofrt5682,1"
+		PlaybackMixerElem "DAC1"
+		JackDev "sof-rt5682 Headset Jack"
+		JackSwitch "6"
 	}
 	EnableSequence [
+		cdev "hw:sofrt5682"
+
+		cset "name='Headphone Jack Switch' on"
+		cset "name='HPOL Playback Switch' 1"
+		cset "name='HPOR Playback Switch' 1"
+		cset "name='Stereo1 DAC MIXL DAC L1 Switch' 1"
+		cset "name='Stereo1 DAC MIXR DAC R1 Switch' 1"
 	]
 	DisableSequence [
+		cdev "hw:sofrt5682"
+
+		cset "name='Headphone Jack Switch' off"
+		cset "name='HPOL Playback Switch' 0"
+		cset "name='HPOR Playback Switch' 0"
 	]
-}
-
-SectionDevice."Internal Mic" {
-	Comment "Internal Mic"
-
-	Value {
-		CapturePCM "hw:sofrt5682,99"
-		CaptureChannelMap "0 1 -1 -1 -1 -1 -1 -1 -1 -1 -1"
-		IntrinsicSensitivity "-2300"
-		}
 }
 
 SectionDevice."Mic" {
 	Comment "Headset Mic"
-
+	
 	Value {
 		CapturePCM "hw:sofrt5682,1"
 		CaptureMixerElem "Headset Mic"
 		JackDev "sof-rt5682 Headset Jack"
-}
+	}
 	EnableSequence [
 		cdev "hw:sofrt5682"
 		cset "name='Headset Mic Switch' on"
-]
+	]
 	DisableSequence [
 		cdev "hw:sofrt5682"
 		cset "name='Headset Mic Switch' off"
-
 	]
+}
+
+SectionDevice."Front Mic" {
+	Comment "Front Mic"
+
+	Value {
+		CapturePCM "hw:sofrt5682,5"
+		CaptureChannelMap "0 1 -1 -1 -1 -1 -1 -1 -1 -1 -1"
+		IntrinsicSensitivity "-2600"
+                DspName "dmic_eq"
+	}
+}
+
+SectionDevice."Rear Mic" {
+	Comment "Rear Mic"
+
+	Value {
+			CapturePCM "hw:sofrt5682,5"
+			CaptureChannelMap "2 3 -1 -1 -1 -1 -1 -1 -1 -1 -1"
+			IntrinsicSensitivity "-2600"
+			DspName "dmic_eq"
+	}
 }
 
 SectionDevice."HDMI1" {
@@ -150,19 +181,6 @@ SectionDevice."HDMI3" {
 	Value {
 		PlaybackPCM "hw:sofrt5682,4"
 		JackDev "sof-rt5682 HDMI/DP,pcm=4"
-	}
-	EnableSequence [
-	]
-	DisableSequence [
-	]
-}
-
-SectionDevice."HDMI4" {
-	Comment "HDMI4"
-
-	Value {
-		PlaybackPCM "hw:sofrt5682,5"
-		JackDev "sof-rt5682 HDMI/DP,pcm=5"
 	}
 	EnableSequence [
 	]
